[tool.poetry]
name = "doi2pdf"
version = "0.1.0"
description = "Retrieve research paper PDF from DOI, name or URL of the research paper"
authors = ["croumegous <cyril.roumegous@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
